--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,7 +83,7 @@ body {
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground font-sans;
   }
   table {
     @apply border-collapse border border-slate-400;
